# pdf-splitter-simple

./: Cargo.toml  README.md
src/: lib.rs
static/: index.html  main.js
