[package]
name = "pdf-splitter-simple"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
js-sys = "0.3.69"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
web-sys = "0.3.69"
features = [
    'Window',
    'Document',
    'File',
    'ProgressEvent',
    'FileReader',
]

[dependencies.wasm-bindgen-futures]
version = "0.4"
