[package]
name = "pdf-splitter-simple"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
base64 = "0.22.1"
image = "0.25.1"
imageproc = "0.25.0"
js-sys = "0.3.69"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
web-sys = "0.3.69"
features = [
    'Window',
    'Document',
    'File',
    'ProgressEvent',
    'FileReader',
]

[dependencies.wasm-bindgen-futures]
version = "0.4"
